2001-04-09  James A  <james@ja.ath.cx>

	* tnt.el (tnt-append-message): changed the end to cause additions
	to buffers to be read-only but still leave the input section of
	the buffer writable.
	(tnt-timestamp-format): added
	(tnt-default-chatroom): added
	(tnt-persistent-timeout): added
	(custom): added support for custom to change faces
	(tnt-append-message): added support for tnt-timestamp-format
	(tnt-persistent-message-disable-id): added
	(tnt-persistent-message-persist): added
	(tnt-persistent-message): removed other version and replaced with
	this one which will redisplay the persistent message in a
	non-destructive way every tnt-persistent-timeout seconds.
	(tnt-read-string-with-default): added
	(tnt-join-chat): changed to use tnt-read-sting-with-default so
	that you simply press enter to use the default chatroom name or
	type in a new name much like you would do with a buffer kill or
	switch.  The reason is that with a random name, it's unlikely
	that the user will want to change it without completely removing
	it.
	(tnt-replace-me-statement): added
	(tnt-append-message): added support for tnt-replace-me-statement
	(tnt-me-statement-format): added
	(tnt-append-message): changed to normalizing tnt-current-user as
	well as user when comparing to see which face to use.  the reason
	for this is that when you want custom formatting of your nick,
	you'll use "J A m E s" as your user name which will be in
	tnt-current-user and thus not match user once normalized.
	(TODO): noticed the processed read-only im todo entry and removed
	it.
	(custom): moved a few of the variables that I had added before
	into the custom support section.
	(tnt-persistent-message-persist): changed to support not
	repeating if someone really doesn't want to have persistent
	messages.
	(tnt-persistent-timeout): changed the doc to describe the change
	above in tnt-persistent-message-persist
	(tnt-handle-error): added more error messages for numbers.
